# durak-sockets

./: .githooks.ini  .gitignore  .pre-commit-config.yaml  .python-version  main.py  pyproject.toml  pytest.ini  requirements.ci.txt  requirements.txt  setup.cfg
.circleci/: config.yml
.github/workflows/: ci.yml
lib/: durak.py
lib/durak/: __init__.py  card.py  draw_pile.py  exceptions.py  game.py  player.py  status.py  table.py
lib/durak/game/: __init__.py  ai.py  collector.py  legal_attacks.py  legal_defenses.py  legal_passes.py  outcomes.py  players.py  queries.py  yielded.py
scripts/: runserver  update-pip-requirements.sh  update_pip_requirements.sh  update_scenarios.py
tests/: conftest.py  test_main.py
tests/lib/: test_durak.py
tests/lib/durak/: test_card.py  test_draw_pile.py  test_game.py  test_game_v1.py  test_game_v2.py  test_hands.py  test_player.py  test_scenarios.py  test_table.py
tests/lib/durak/scenario_inputs/: cannot_attack_with_unmatched_rank.json  collect_rotates_properly.json  defend_successfully_after_attack_plays_last_card.json  passed_with_last_card.json  started_game.json  yielding_when_defender_wins.json
tests/lib/durak/scenario_inputs/anna_out_of_game/: input.json  output.json
tests/lib/durak/scenario_inputs/attack_limit_6/: input.json  output.json
tests/lib/durak/scenario_inputs/cannot_attack_with_unmatched_rank/: input.json  output.json
tests/lib/durak/scenario_inputs/collect_rotates_properly/: input.json  output.json
tests/lib/durak/snapshots/: snap_test_scenarios.py
(+46 files in other folders)
