[tool.poetry]
name = "durak-ws"
version = "0.1.0"
description = ""
authors = ["Maxim Pertsov <maxim.pertsov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
gunicorn = "^20.0.4"
broadcaster = { git = "https://github.com/maximpertsov/broadcaster.git", branch = "authenticate-redis" }
asyncio-redis = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
